# rust-star-history

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  action.yml  install.sh
.github/workflows/: cd.yml  ci.yml  star-history.yml
src/: chart.rs  date.rs  github.rs  main.rs  store.rs
