[package]
name = "rust-star-history"
version = "1.0.1"
edition = "2021"
description = "Generate self-contained star-history SVG charts for any GitHub repo. No gh CLI required."
license = "MIT"
repository = "https://github.com/Flux159/rust-star-history"

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
ureq = "2"

[profile.release]
lto = true
strip = true
